--- a/Lab-1/vagrant.student/files/apache2/atenea.olimpo.test.conf
+++ b/Lab-1/vagrant.student/files/apache2/atenea.olimpo.test.conf
@@ -7,6 +7,12 @@
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
 	
+<Directory /var/www/atenea.olimpo.test>
+	Options -Indexes -FollowSymLinks
+	AllowOverride None
+	Require all granted
+</Directory>
+
 	ServerName atenea.olimpo.test
 
 	ServerAdmin webmaster@localhost
