--- a/Lab-2/vagrant.alumnos/Vagrantfile
+++ b/Lab-2/vagrant.alumnos/Vagrantfile
@@ -4,7 +4,7 @@
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "generic/debian11"
+  config.vm.box = "debian/bullseye64"
   
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
